force-app/main/default/objects/CRMforNonProfit__UniCredit_Settings__c/CRMforNonProfit__UniCredit_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>UniCredit Settings</label>
</CustomObject>