force-app/main/default/objects/CRMforNonProfit__UniCredit_Settings__c/fields/CRMforNonProfit__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>