force-app/main/default/objects/CRMforNonProfit__UniCredit_Settings__c/fields/CRMforNonProfit__Username__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>